--- a/index.html
+++ b/index.html
@@ -75,13 +75,20 @@
           <h2 class="visually-hidden">Effective solutions</h2>
           <ul class="list list-feature">
             <li class="section-feature">
+              <svg>
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
+
             <li class="section-feature">
+              <svg>
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -89,6 +96,9 @@
               </p>
             </li>
             <li class="section-feature">
+              <svg>
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -96,6 +106,9 @@
               </p>
             </li>
             <li class="section-feature">
+              <svg>
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -136,6 +149,38 @@
               <div class="card-content">
                 <h3 class="index-card-header">Mark Guerrero</h3>
                 <p class="index-card-text">Product Designer</p>
+
+                <ul class="social-media list">
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -143,6 +188,38 @@
               <div class="card-content">
                 <h3 class="index-card-header">Tom Ford</h3>
                 <p class="index-card-text">Frontend Developer</p>
+
+                <ul class="social-media list">
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -150,6 +227,38 @@
               <div class="card-content">
                 <h3 class="index-card-header">Camila Garcia</h3>
                 <p class="index-card-text">Marketing</p>
+
+                <ul class="social-media list">
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -157,7 +266,79 @@
               <div class="card-content">
                 <h3 class="index-card-header">Daniel Wilson</h3>
                 <p class="index-card-text">UI Designer</p>
+
+                <ul class="social-media list">
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Section Customers-->
+
+      <section>
+        <div class="container">
+          <h2 class="section-header">Customers</h2>
+          <ul class="customers-list">
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-company-tagline"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-company"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-peters"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-brand"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon" width="" height="">
+                <use href="./images/icons.svg#icon-tag-line"></use>
+              </svg>
             </li>
           </ul>
         </div>
