--- a/index.html
+++ b/index.html
@@ -306,37 +306,37 @@
 
       <!--Section Customers-->
 
-      <section>
+      <section class="section-customers">
         <div class="container">
           <h2 class="section-header">Customers</h2>
-          <ul class="customers-list">
-            <li>
-              <svg class="icon" width="" height="">
+          <ul class="customers-list list">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-yaco"></use>
               </svg>
             </li>
-            <li>
-              <svg class="icon" width="" height="">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-company-tagline"></use>
               </svg>
             </li>
-            <li>
-              <svg class="icon" width="" height="">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-company"></use>
               </svg>
             </li>
-            <li>
-              <svg class="icon" width="" height="">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-peters"></use>
               </svg>
             </li>
-            <li>
-              <svg class="icon" width="" height="">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-brand"></use>
               </svg>
             </li>
-            <li>
-              <svg class="icon" width="" height="">
+            <li class="team-customers">
+              <svg class="icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-tag-line"></use>
               </svg>
             </li>
