--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
           <h2 class="visually-hidden">Effective solutions</h2>
           <ul class="list list-feature">
             <li class="section-feature">
-              <svg>
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="icon-solution">
+                <svg class="feature-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -86,9 +88,11 @@
             </li>
 
             <li class="section-feature">
-              <svg>
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="icon-solution">
+                <svg class="feature-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -96,9 +100,11 @@
               </p>
             </li>
             <li class="section-feature">
-              <svg>
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="icon-solution">
+                <svg class="feature-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -106,9 +112,11 @@
               </p>
             </li>
             <li class="section-feature">
-              <svg>
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="icon-solution">
+                <svg class="feature-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -356,6 +364,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="social-media">
+        <p>Social media</p>
+        <ul class="media-link list">
+          <li>
+            <a href="" class="link">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
