--- a/portfolio.html
+++ b/portfolio.html
@@ -64,29 +64,38 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list filters-container">
             <li>
-              <button type="button" class="button-list-text">All</button>
+              <button type="button" class="portfolio-filters">All</button>
             </li>
             <li>
-              <button type="button" class="button-list-text">Web Site</button>
+              <button type="button" class="portfolio-filters">Web Site</button>
             </li>
             <li>
-              <button type="button" class="button-list-text">App</button>
+              <button type="button" class="portfolio-filters">App</button>
             </li>
             <li>
-              <button type="button" class="button-list-text">Design</button>
+              <button type="button" class="portfolio-filters">Design</button>
             </li>
             <li>
-              <button type="button" class="button-list-text">Marketing</button>
+              <button type="button" class="portfolio-filters">Marketing</button>
             </li>
           </ul>
           <ul class="list project-container">
             <li class="portfolio-cards">
-              <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
+              <a href="" class="link">
+                <div class="card-image">
+                  <img
+                    src="./images/portfolio/img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
                     Banking App Interface Concept
@@ -96,12 +105,21 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+              <a href="" class="link">
+                <div class="card-image">
+                  <img
+                    src="./images/portfolio/img2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Cashless Payment</h2>
                   <p class="portfolio-card-text">Marketing</p>
@@ -109,12 +127,21 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+              <a href="" class="link">
+                <div class="card-image">
+                  <img
+                    src="./images/portfolio/img3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Meditation App</h2>
                   <p class="portfolio-card-text">App</p>
@@ -122,12 +149,21 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+              <a href="" class="link">
+                <div class="card-image">
+                  <img
+                    src="./images/portfolio/img4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Taxi Service</h2>
                   <p class="portfolio-card-text">Marketing</p>
@@ -136,11 +172,20 @@
             </li>
             <li class="portfolio-cards">
               <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Screen Illustrations</h2>
                   <p class="portfolio-card-text">Design</p>
@@ -149,11 +194,20 @@
             </li>
             <li class="portfolio-cards">
               <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Online Courses</h2>
                   <p class="portfolio-card-text">Marketing</p>
@@ -162,11 +216,20 @@
             </li>
             <li class="portfolio-cards">
               <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
                     Instagram Stories Concept
@@ -177,11 +240,20 @@
             </li>
             <li class="portfolio-cards">
               <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+                ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Organic Food</h2>
                   <p class="portfolio-card-text">Web Site</p>
@@ -190,11 +262,20 @@
             </li>
             <li class="portfolio-cards">
               <a href="" class="link"
-                ><img
-                  src="./images/portfolio/img9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+                ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Fresh Coffee</h2>
                   <p class="portfolio-card-text">Web Site</p>
