--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
               <div class="card-content">
                 <h3 class="index-card-header">Mark Guerrero</h3>
                 <p class="index-card-text">Product Designer</p>
-
                 <ul class="social-media list">
                   <li>
                     <a href="" class="link">
@@ -274,7 +273,6 @@
               <div class="card-content">
                 <h3 class="index-card-header">Daniel Wilson</h3>
                 <p class="index-card-text">UI Designer</p>
-
                 <ul class="social-media list">
                   <li>
                     <a href="" class="link">
@@ -356,47 +354,50 @@
     <!--Footer Section-->
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social-media">
-        <p>Social media</p>
-        <ul class="media-link list">
-          <li>
-            <a href="" class="link">
-              <svg class="icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <svg class="icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <svg class="icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <svg class="icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div>
+          <p class="footer-social-media-text">Social media</p>
+          <ul class="footer-social-media list">
+            <li>
+              <a href="" class="link">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
