--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
       <section class="main-content">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
+
           <button class="order-button" type="button" data-modal-open>
             Order Service
           </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <p>jjjjjjjjjjjjjjjjj</p>
-              <button data-modal-close></button>
+              <button class="close-button" data-modal-close></button>
             </div>
           </div>
         </div>
