--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <p>jjjjjjjjjjjjjjjjj</p>
-              <button class="close-button" data-modal-close></button>
+              <button class="close-button" data-modal-close>
+                <svg class="" width="8" height="8">
+                  <use
+                    href="./images/close-black-one.svg#close-black-18dp (2) 1"
+                  ></use>
+                </svg>
+              </button>
             </div>
           </div>
         </div>
