--- a/index.html
+++ b/index.html
@@ -68,18 +68,6 @@
           <button class="order-button" type="button" data-modal-open>
             Order Service
           </button>
-          <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-              <p>jjjjjjjjjjjjjjjjj</p>
-              <button class="close-button" data-modal-close>
-                <svg class="" width="8" height="8">
-                  <use
-                    href="./images/close-black-one.svg#close-black-18dp (2) 1"
-                  ></use>
-                </svg>
-              </button>
-            </div>
-          </div>
         </div>
       </section>
 
@@ -415,6 +403,18 @@
         </div>
       </div>
     </footer>
+
+    <!--modal window-->
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+       <button class="modal-button"
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
