--- a/index.html
+++ b/index.html
@@ -405,10 +405,9 @@
     </footer>
 
     <!--modal window-->
-
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-       <button class="modal-button"
+        <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
