--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
               <a href="./index.html" class="header-nav-list link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="header-nav-list link"
+              <a
+                href="./portfolio.html"
+                class="header-nav-list link actual-page"
                 >Portfolio</a
               >
             </li>
