--- a/index.html
+++ b/index.html
@@ -320,34 +320,46 @@
           <h2 class="section-header">Customers</h2>
           <ul class="customers-list list">
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-yaco"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-yaco"></use>
+                </svg>
+              </a>
             </li>
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-company-tagline"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-company-tagline"></use>
+                </svg>
+              </a>
             </li>
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-company"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
             </li>
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-peters"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-peters"></use>
+                </svg>
+              </a>
             </li>
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-brand"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
             </li>
             <li class="team-customers">
-              <svg class="icon" width="104" height="56">
-                <use href="./images/icons.svg#icon-tag-line"></use>
-              </svg>
+              <a href="" class="customers-link">
+                <svg class="icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-tag-line"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
