--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
           <ul class="list container-nav">
             <li>
-              <a href="./index.html" class="header-nav-list link">Studio</a>
+              <a href="./index.html" class="header-nav-list link actual-page"
+                >Studio</a
+              >
             </li>
             <li>
               <a href="./portfolio.html" class="header-nav-list link"
