--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <h3 class="index-card-header">Mark Guerrero</h3>
                 <p class="index-card-text">Product Designer</p>
                 <ul class="social-media list">
-                  <li>
+                  <li class="social-icons">
                     <a href="" class="link">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -385,7 +385,7 @@
         <div>
           <p class="footer-social-media-text">Social media</p>
           <ul class="footer-social-media list">
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
