--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
         <div>
           <p class="footer-social-media-text">Social media</p>
           <ul class="footer-social-media list">
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
