--- a/portfolio.html
+++ b/portfolio.html
@@ -83,13 +83,8 @@
           </ul>
           <ul class="list project-container">
             <li class="portfolio-cards">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="card-image">
-                  <img
-                    src="./images/portfolio/img1.jpg"
-                    alt="Banking App Interface Concept"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -97,6 +92,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -107,13 +107,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="card-image">
-                  <img
-                    src="./images/portfolio/img2.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -121,6 +116,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Cashless Payment</h2>
@@ -129,13 +129,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="card-image">
-                  <img
-                    src="./images/portfolio/img3.jpg"
-                    alt="Meditation App"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -143,6 +138,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Meditation App</h2>
@@ -151,13 +151,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="card-image">
-                  <img
-                    src="./images/portfolio/img4.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -165,6 +160,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Taxi Service</h2>
@@ -173,13 +173,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
+              <a href="" class="link portfolio-link"
                 ><div class="card-image">
-                  <img
-                    src="./images/portfolio/img5.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -187,6 +182,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Screen Illustrations</h2>
@@ -195,13 +195,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
+              <a href="" class="link portfolio-link"
                 ><div class="card-image">
-                  <img
-                    src="./images/portfolio/img6.jpg"
-                    alt="Online Courses"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -209,6 +204,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Online Courses</h2>
@@ -217,13 +217,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
+              <a href="" class="link portfolio-link"
                 ><div class="card-image">
-                  <img
-                    src="./images/portfolio/img7.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -231,6 +226,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -241,13 +241,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
+              <a href="" class="link portfolio-link"
                 ><div class="card-image">
-                  <img
-                    src="./images/portfolio/img8.jpg"
-                    alt="Organic Food"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -255,6 +250,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Organic Food</h2>
@@ -263,13 +263,8 @@
               </a>
             </li>
             <li class="portfolio-cards">
-              <a href="" class="link"
+              <a href="" class="link portfolio-link"
                 ><div class="card-image">
-                  <img
-                    src="./images/portfolio/img9.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -277,6 +272,11 @@
                       App · Cloud Storage App
                     </p>
                   </div>
+                  <img
+                    src="./images/portfolio/img9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Fresh Coffee</h2>
@@ -293,7 +293,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="">
           <a href="./index.html" class="footer-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -313,21 +313,21 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
