--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="">
           <a href="./index.html" class="footer-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -392,21 +392,21 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-icons">
               <a href="" class="link">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
