--- a/portfolio.html
+++ b/portfolio.html
@@ -85,18 +85,19 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link">
                 <div class="card-image">
+                  <img
+                    src="./images/portfolio/img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
                   <div class="card-overlay">
+                    <
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img1.jpg"
-                    alt="Banking App Interface Concept"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -109,6 +110,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link">
                 <div class="card-image">
+                  <img
+                    src="./images/portfolio/img2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -116,11 +122,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img2.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Cashless Payment</h2>
@@ -131,6 +132,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link">
                 <div class="card-image">
+                  <img
+                    src="./images/portfolio/img3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -138,11 +144,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img3.jpg"
-                    alt="Meditation App"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Meditation App</h2>
@@ -153,6 +154,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link">
                 <div class="card-image">
+                  <img
+                    src="./images/portfolio/img4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -160,11 +166,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img4.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Taxi Service</h2>
@@ -175,6 +176,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link"
                 ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -182,11 +188,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img5.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Screen Illustrations</h2>
@@ -197,6 +198,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link"
                 ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -204,11 +210,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img6.jpg"
-                    alt="Online Courses"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Online Courses</h2>
@@ -219,6 +220,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link"
                 ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -226,11 +232,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img7.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -243,6 +244,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link"
                 ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -250,11 +256,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img8.jpg"
-                    alt="Organic Food"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Organic Food</h2>
@@ -265,6 +266,11 @@
             <li class="portfolio-cards">
               <a href="" class="link portfolio-link"
                 ><div class="card-image">
+                  <img
+                    src="./images/portfolio/img9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
                   <div class="card-overlay">
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -272,11 +278,6 @@
                       App · Cloud Storage App
                     </p>
                   </div>
-                  <img
-                    src="./images/portfolio/img9.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                  />
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Fresh Coffee</h2>
@@ -293,7 +294,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="">
+        <div>
           <a href="./index.html" class="footer-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
