--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-icons">
                     <a href="" class="link">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-icons">
                     <a href="" class="link">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-icons">
                     <a href="" class="link">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
