--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="">
+        <div class="footer-solutions">
           <a href="./index.html" class="footer-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
