--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,6 @@
                     width="360"
                   />
                   <div class="card-overlay">
-                    <
                     <p class="card-overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -294,7 +293,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-solutions">
           <a href="./index.html" class="footer-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
